--- a/dl/index.html
+++ b/dl/index.html
@@ -28,7 +28,7 @@
                 </a>
 
                 <ul>
-                    <li>
+                    <li class="active">
                         <a href="javascript:void(0)">
                             <img src="assets/svg/icons/all-downloads.svg" class="icon">
                             <span class="badge">5</span>
@@ -122,6 +122,13 @@
                 </ul>
             </li>
         </ul>
+
+        <footer>
+            Downloader
+            <a href="javascript:void(0)" id="settings-btn">
+                <img src="assets/svg/icons/settings.svg">
+            </a>
+        </footer>
     </div>
     <div id="content">
         <header>
@@ -132,19 +139,13 @@
             </div>
             <ul id="actions">
                 <li>
-                    <a href="javascript:void(0)">
-                        <img src="assets/svg/icons/pause.svg">
-                    </a>
+                    <a href="javascript:void(0)" class="btn-action btn-pause"></a>
                 </li>
                 <li>
-                    <a href="javascript:void(0)">
-                        <img src="assets/svg/icons/stop.svg">
-                    </a>
+                    <a href="javascript:void(0)" class="btn-action btn-stop"></a>
                 </li>
                 <li>
-                    <a href="javascript:void(0)">
-                        <img src="assets/svg/icons/close.svg">
-                    </a>
+                    <a href="javascript:void(0)" class="btn-action btn-delete"></a>
                 </li>
             </ul>
         </header>
@@ -191,15 +192,9 @@
                     <td>14:43</td>
                     <td>
                         <div>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/pause.svg">
-                            </a>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/stop.svg">
-                            </a>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/close.svg">
-                            </a>
+                            <a href="javascript:void(0)" class="btn-action btn-pause"></a>
+                            <a href="javascript:void(0)" class="btn-action btn-stop"></a>
+                            <a href="javascript:void(0)" class="btn-action btn-delete"></a>
                         </div>
                     </td>
                 </tr>
@@ -226,15 +221,11 @@
                     <td>03:25</td>
                     <td>
                         <div>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/pause.svg">
-                            </a>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/stop.svg">
-                            </a>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/close.svg">
-                            </a>
+                            <div>
+                            <a href="javascript:void(0)" class="btn-action btn-pause"></a>
+                            <a href="javascript:void(0)" class="btn-action btn-stop"></a>
+                            <a href="javascript:void(0)" class="btn-action btn-delete"></a>
+                        </div>
                         </div>
                     </td>
                 </tr>
@@ -261,12 +252,10 @@
                     <td>20:42</td>
                     <td>
                         <div>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/play.svg">
-                            </a>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/close.svg">
-                            </a>
+                            <div>
+                            <a href="javascript:void(0)" class="btn-action btn-start"></a>
+                            <a href="javascript:void(0)" class="btn-action btn-delete"></a>
+                        </div>
                         </div>
                     </td>
                 </tr>
@@ -293,9 +282,9 @@
                     <td>01:32</td>
                     <td>
                         <div>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/close.svg">
-                            </a>
+                            <div>
+                            <a href="javascript:void(0)" class="btn-action btn-delete"></a>
+                        </div>
                         </div>
                     </td>
                 </tr>
@@ -322,15 +311,9 @@
                     <td>17:13</td>
                     <td>
                         <div>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/pause.svg">
-                            </a>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/stop.svg">
-                            </a>
-                            <a href="javascript:void(0)">
-                                <img src="assets/svg/icons/close.svg">
-                            </a>
+                            <a href="javascript:void(0)" class="btn-action btn-pause"></a>
+                            <a href="javascript:void(0)" class="btn-action btn-stop"></a>
+                            <a href="javascript:void(0)" class="btn-action btn-delete"></a>
                         </div>
                     </td>
                 </tr>
